# enlilviz

./: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
docs/: Makefile  conf.py  enlil.plotting.rst  enlil.rst  enlilviz.plotting.rst  enlilviz.rst  examples.rst  index.rst  installation.rst  make.bat  modules.rst  usage.rst
enlil/: __init__.py  enlil.py  io.py
enlil/plotting/: forecaster.py
enlilviz/: __init__.py  enlil.py  io.py
enlilviz/plotting/: __init__.py  forecaster.py  plots.py
tests/: __init__.py  conftest.py  test_enlil.py  test_evolution.py
